samples/_failures_safe/1761127565_6bb3ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31c11962.c: In function ‘main’:
./samples/SAFE/__tmp_31c11962.c:168:10: error: ‘t’ undeclared (first use in this function)
  168 |     if (!t
      |          ^
./samples/SAFE/__tmp_31c11962.c:168:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_31c11962.c:168:11: error: expected ‘)’ at end of input
  168 |     if (!t
      |        ~  ^
      |           )
./samples/SAFE/__tmp_31c11962.c:168:5: error: expected declaration or statement at end of input
  168 |     if (!t
      |     ^~
